<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/choice_search_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/choice_search_bt" />

    <TextView
        android:id="@+id/choice_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/choice_name_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/choice_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_name_tv"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/choice_name_et"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/choice_frequency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_male_cb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/choice_frequency_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioButton
        android:id="@+id/choice_high_rbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/choice_veryhigh_rbt"
        android:layout_alignBottom="@+id/choice_veryhigh_rbt"
        android:layout_centerHorizontal="true"
        android:text="@string/choice_high_rbt" />

    <Button
        android:id="@+id/choice_origin_picker_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_high_rbt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/choice_origin_picker_bt" />

    <RadioButton
        android:id="@+id/choice_veryhigh_rbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_frequency_tv"
        android:layout_toLeftOf="@+id/choice_search_bt"
        android:text="@string/choice_veryhigh_rbt" />

    <RadioButton
        android:id="@+id/choice_low_rbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choice_origin_picker_bt"
        android:layout_toRightOf="@+id/choice_high_rbt"
        android:checked="true"
        android:text="@string/choice_low_rbt" />

    <CheckBox
        android:id="@+id/choice_male_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/choice_female_cb"
        android:layout_alignBottom="@+id/choice_female_cb"
        android:layout_alignLeft="@+id/choice_name_et"
        android:checked="true"
        android:text="@string/choice_male_cb" />

    <CheckBox
        android:id="@+id/choice_female_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/choice_name_et"
        android:layout_below="@+id/choice_gender_tv"
        android:checked="true"
        android:text="@string/choice_female_cb" />

    <TextView
        android:id="@+id/choice_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_name_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/choice_gender_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>