<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

     <Button
         android:id="@+id/main_all_firstnames_list_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/main_tv"
         android:layout_centerHorizontal="true"
         android:text="@string/all_firstnames_list_bt" />

     <Button
         android:id="@+id/main_male_frequent_firstnames_list_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/main_male_firstnames_list_bt"
         android:layout_centerHorizontal="true"
         android:text="@string/male_frequent_firstnames_list_bt" />

     <Button
         android:id="@+id/main_male_firstnames_list_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/main_all_firstnames_list_bt"
         android:layout_centerHorizontal="true"
         android:text="@string/male_firstnames_list_bt" />

     <Button
         android:id="@+id/main_male_frequent_french_firstnames_list_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/main_male_veryfrequent_french_firstnames_list_bt"
         android:layout_below="@+id/main_male_frequent_firstnames_list_bt"
         android:text="@string/male_frequent_french_firstnames_list_bt" />

     <Button
         android:id="@+id/main_male_veryfrequent_french_firstnames_list_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/main_tv"
         android:layout_below="@+id/main_male_frequent_french_firstnames_list_bt"
         android:text="@string/male_veryfrequent_french_firstnames_list_bt" />

     <Button
         android:id="@+id/main_choice_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/main_male_veryfrequent_french_firstnames_list_bt"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:text="@string/main_choice_bt" />

</RelativeLayout>